MongoDB-Anbindung (inkl. embedded mongodb) auf aktuellen Stand gebracht
TODO: Tests!