@@ -1,66 +1,57 @@
-buildscript {
-    ext {
-        springBootVersion = '2.3.3.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-        maven { url "https://repo.spring.io/snapshot" }
-        maven { url "https://repo.spring.io/milestone" }
-    }
-
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
+plugins {
+    id 'org.springframework.boot' version '2.3.3.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'java'
+    id 'jacoco'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'jacoco'
-
+group = 'com.eigenbaumarkt.spring5_mongodb_reactive_recipe_app'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 12
+sourceCompatibility = '12'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
-    maven { url "https://repo.spring.io/snapshot" }
-    maven { url "https://repo.spring.io/milestone" }
 }
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
-    implementation('org.springframework.boot:spring-boot-starter-web')
-    implementation('org.springframework.boot:spring-boot-starter-webflux')
-    implementation('org.springframework.boot:spring-boot-starter-data-mongodb')
-    implementation('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
-    implementation('org.springframework.boot:spring-boot-starter-validation')
-    implementation('org.webjars:bootstrap:3.4.1')
-    implementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
-    implementation('cz.jirutka.spring:embedmongo-spring:1.3.1')
 
-    compileOnly('org.projectlombok:lombok')
-    annotationProcessor('org.projectlombok:lombok')
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.webjars:bootstrap:3.4.1'
 
-    testCompileOnly('org.projectlombok:lombok')
+    implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+
+    compileOnly 'org.projectlombok:lombok'
+
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+    annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    testImplementation('org.junit.jupiter:junit-jupiter-api')
-    testImplementation('org.junit.jupiter:junit-jupiter-engine')
-    testCompileOnly('io.projectreactor:reactor-test')
 
-    testAnnotationProcessor('org.projectlombok:lombok')
+    // testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+    testImplementation 'io.projectreactor:reactor-test'
 
-    // super-set, see: https://stackoverflow.com/a/44507716/7773582
-    testRuntimeOnly('org.springframework.boot:spring-boot-devtools')
+    // wenn @Nullable verwendet wird, kommt die Warnung 'Warning:java: unknown enum constant javax.annotation.meta.When.MAYBE'
+    // Abhilfe (siehe: https://html.developreference.com/article/10955407/Spring+nullable+annotation+generates+unknown+enum+constant+warning):
+    testImplementation 'com.google.code.findbugs:annotations'
 }
 
-tasks.withType(Test) {
+test {
     useJUnitPlatform()
-    jvmArgs '--enable-preview'
 }
-
 
 // export test coverage
 jacocoTestReport {
